# jsonobject

./: .gitignore  .travis.yaml  .travis.yml  CHANGES.md  LIFECYCLE.md  MANIFEST.in  README.md  README.rst  jsonobject.py  pyproject.toml  sample_generator.py  setup.cfg  setup.py  test_cython_files.sh  testcouchdbkit.py  tests.py  tox.ini  version.py
.github/workflows/: pypi.yml  rebuild_c_files.yml  tests.yml
.travis/: install_cython.sh  test_cython_files.sh
couchdbkit_shim/: __init__.py  requirements.txt
jsonobject/: __init__.py  api.c  api.py  api.pyx  base.c  base.py  base.pyx  base_properties.c  base_properties.py  base_properties.pyx  containers.c  containers.py  containers.pyx  convert.py  exceptions.py  factory.py  formatted_datetime.py  properties.c  properties.py  properties.pyx  utils.c  utils.py
scripts/: install_cython.sh  test_cython_files.sh
test/: test_couchdbkit.py  test_stringconversions.py  tests.py
test/couchdbkit/: application.py  couchdbkit.py
